--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,51 @@
+@import './variables.scss';
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
 }
 
-input {
-  outline: none;
+$infinite-animation: 2s linear infinite;
+
+.label {
+  position: relative;
+  padding-top: 20px;
+  font-size: 20px;
+
+  & .placeholder {
+    position: absolute;
+    left: 12px;
+    font-size: 20px;
+    top: calc(50% - 3px);
+    transition: all 0.5s ease;
+  }
+
+  & input {
+    border: none;
+    appearance: none;
+    padding: 12px;
+    font-size: 20px;
+    max-width: 100%;
+    border-radius: .4rem .4rem 0 0;
+    outline: none;
+    background: linear-gradient(90deg, #222, #222) left bottom/0 2px no-repeat, linear-gradient(90deg, #ccc, #ccc) left bottom/100% 2px no-repeat, linear-gradient(90deg, #fafafa, #fafafa) left bottom/100% no-repeat;
+    transition: all 0.5s ease;
+
+    &:valid,
+    &:focus {
+      background-size: 100% 2px, 100% 2px, 100%;
+    }
+
+    &:valid+.placeholder,
+    &:focus+.placeholder {
+      top: 3px;
+      font-size: 14px;
+      color: #222;
+    }
+  }
 }
+
 
 html,
 body,
@@ -14,6 +53,7 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background-color: $background;
 }
 
 /* For WebKit browsers (e.g., Chrome, Safari) */
@@ -26,16 +66,12 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #d6d6d6;
-  border-radius: 5px;
+  background: #DF98B2;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #acacac;
+  background: #dc8ca9;
 }
-
-
-
 
 @-webkit-keyframes spin {
   0% {
@@ -57,12 +93,10 @@ body,
   }
 }
 
-$infinite-animation: 2s linear infinite;
-
 .loader {
   border: 5px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 5px solid #EFB8C8;
+  border-top: 5px solid #e690a8;
   width: 120px;
   height: 120px;
   -webkit-animation: spin $infinite-animation;
