--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,30 @@
-@import './variables.scss';
+@import './themes.scss';
+
+.pink-light {
+  @include theme($pink-light);
+}
+
+.pink-dark {
+  @include theme($pink-dark);
+}
+
+.blue-light {
+  @include theme($blue-light);
+}
+
+.blue-dark {
+  @include theme($blue-dark);
+}
+
+.wb-light {
+  @include theme($wb-light);
+}
+
+.wb-dark {
+  @include theme($wb-dark);
+}
+
+
 
 * {
   margin: 0;
@@ -19,6 +45,7 @@ $infinite-animation: 2s linear infinite;
     font-size: 20px;
     top: calc(50% - 3px);
     transition: all 0.5s ease;
+    color: #222
   }
 
   & input {
@@ -41,7 +68,8 @@ $infinite-animation: 2s linear infinite;
     &:focus+.placeholder {
       top: 3px;
       font-size: 14px;
-      color: #222;
+      color: var(--text-color);
+
     }
   }
 }
@@ -53,7 +81,6 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: $background;
 }
 
 /* For WebKit browsers (e.g., Chrome, Safari) */
@@ -66,11 +93,11 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #DF98B2;
+  background: var(--scroll-color);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #dc8ca9;
+  background: var(--scroll-color-hover);
 }
 
 @-webkit-keyframes spin {
