--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,8 +7,6 @@
   color: var(--text-color)
 }
 
-$infinite-animation: 2s linear infinite;
-
 .label {
   position: relative;
   padding-top: 20px;
@@ -52,6 +50,24 @@ $infinite-animation: 2s linear infinite;
   }
 }
 
+button {
+  padding: .5rem;
+  background: var(--button-color);
+  border: none;
+  color: var(--text-color);
+  font-size: 17px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+  border-radius: .4rem;
+  transition: all .5s ease;
+  letter-spacing: 3px;
+
+  &:hover {
+    background: var(--button-color-hover);
+  }
+}
 
 html,
 body,
@@ -76,34 +92,4 @@ body,
 
 ::-webkit-scrollbar-thumb:hover {
   background: var(--scroll-color-hover);
-}
-
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.loader {
-  border: 5px solid --panel;
-  border-radius: 50%;
-  border-top: 5px solid var(--scroll-color);
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin $infinite-animation;
-  animation: spin $infinite-animation;
 }
