--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -30,33 +30,33 @@ $pink-dark: (
 );
 
 $green-light: (
-    bckg-color: #E5C5D0,
+    bckg-color: #bbfbdc,
     chat-background: #FFEAF1,
-    hover-background: #DF98B2,
-    chat-user-message: #CC79A1,
-    chat-opponent-message: #FFEAF1,
-    panel: #FFEAF1,
-    button-color: #C26287,
-    button-color-hover: #b25277,
+    hover-background: #93f5c7,
+    chat-user-message: #d6ffd8,
+    chat-opponent-message: #edffeb,
+    panel: #dffff0,
+    button-color: #91f0c4,
+    button-color-hover: #6fe3ad,
     text-color: #000,
-    border-color: #ff8fbb,
-    scroll-color: #DF98B2,
-    scroll-color-hover: #b5708a
+    border-color: #93f5c7,
+    scroll-color: #93f5c7,
+    scroll-color-hover: #d2ffc8
 );
 
 $green-dark: (
-    bckg-color: #2F1D24,
-    chat-background: #3A2933,
-    hover-background: #D884A2,
-    chat-user-message: #8D4F76,
-    chat-opponent-message: #3D2935,
-    panel: #3A2933,
-    button-color: #7d4468,
-    button-color-hover: #643553,
+    bckg-color: #1f2f1d,
+    chat-background: #293a2f,
+    hover-background: #437054,
+    chat-user-message: #3b664d,
+    chat-opponent-message: #293d32,
+    panel: #23342a,
+    button-color: #447d5f,
+    button-color-hover: #2b4f3b,
     text-color: #fff,
     border-color: #2F1D24,
-    scroll-color: #D884A2,
-    scroll-color-hover: #90566c,
+    scroll-color: #437054,
+    scroll-color-hover: #437054,
     blacky:true,
 );
 
@@ -92,34 +92,34 @@ $blue-dark: (
 );
 
 $wb-light: (
-    bckg-color: #DDDDDD,
-    chat-background: #FFFFFF,
-    hover-background: #FCFCFC,
-    chat-user-message: #BEBEBE,
-    chat-opponent-message: #F0F0F0,
-    panel: #505050,
-    button-color: #5F5F5F,
-    button-color-hover: #545454,
+    bckg-color: #efefef,
+    chat-background: #b2b2b2,
+    hover-background: #f4f4f4,
+    chat-user-message: #c9c9c9,
+    chat-opponent-message: #fafafa,
+    panel: #e0e0e0,
+    button-color: #b0b0b0,
+    button-color-hover: #8f8f8f,
     text-color: #000,
     border-color: #FCFCFC,
-    scroll-color: #FCFCFC,
-    scroll-color-hover: #e2e2e2
+    scroll-color: #f4f4f4,
+    scroll-color-hover: #ebebeb
 );
 
 $wb-dark: (
     bckg-color: #292929,
     chat-background: #505050,
-    hover-background: #2F1D24,
-    chat-user-message: #ADADAD,
-    chat-opponent-message: #505050,
-    panel: #505050,
-    button-color: #A9A9A9,
-    button-color-hover: #191919,
+    hover-background: #393939,
+    chat-user-message: #4e4e4e,
+    chat-opponent-message: #313131,
+    panel: #272727,
+    button-color: #545454,
+    button-color-hover: #3d3d3d,
     text-color: #fff,
     blacky:true,
-    border-color: #2F1D24,
-    scroll-color: #2F1D24,
-    scroll-color-hover: #22151a
+    border-color: #393939,
+    scroll-color: #393939,
+    scroll-color-hover: #2d2d2d
 );
 
 @mixin theme($theme-map) {
