--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,8 @@
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
-  color: var(--text-color)
+  color: var(--text-color);
+  box-sizing: border-box;
 }
 
 .label {
